--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <!-- }/*modal en whatsapp/* -->
 </head>
 
 <body>
@@ -27,11 +26,12 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="navbardropdown justify-content-end collapse navbar-collapse" id="navbarNavDropdown">
                 <button type="button" class="btn btn-success mx-3" data-bs-toggle="modal"
                     data-bs-target="#exampleModal">Create a New Post
                 </button>
-                <div class="dropdown engranaje" >
+                <div class="dropdown engranaje">
                     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false"><i class="fa-solid fa-gear"></i></a>
                     <ul class="dropdown-menu">
@@ -50,7 +50,8 @@
                             <div class="modal-header">
                                 <h1 class="modal-title fs-5" id="exampleModalLabel">Create a New Post</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
+                                    aria-label="Close">
+                                </button>
                             </div>
                             <div class="modal-body">
                                 <label for="post" class="Caption">Caption:</label>
@@ -58,19 +59,21 @@
                                 <textarea name="Caption" max-width="100%" class="form-control"
                                     placeholder="Add the caption of your post here"></textarea>
                                 <br />
-                                <button type="button" class="btn btn-light"><i class="fa-solid fa-camera"></i></button>
-                                <button type="button" class="btn btn-light"><i
-                                        class="fa-solid fa-location-dot"></i></button>
+                                <button type="button" class="btn btn-light"><i class="fa-solid fa-camera"></i>
+                                </button>
+                                <button type="button" class="btn btn-light"><i class="fa-solid fa-location-dot"></i>
+                                </button>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-success">Publish</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                </button>
+                                <button type="button" class="btn btn-success">Publish
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </nav>
 
@@ -78,12 +81,14 @@
         <li class="nav-item" role="presentation">
             <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
                 role="tab" aria-controls="home" aria-selected="true"><i class="fa-solid fa-table-cells"
-                    id="grid"></i></button>
+                    id="grid"></i>
+            </button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
                 role="tab" aria-controls="profile" aria-selected="false"><i class="fa-solid fa-square"
-                    id="square"></i></button>
+                    id="square"></i>
+            </button>
         </li>
     </ul>
 
@@ -120,8 +125,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
         <div class="tab-pane fade" class="tab" id="profile" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-6 col-md-4">
@@ -132,9 +137,8 @@
                         <div class="card-body">
                             <h6 class="card-subtittle">354 Likes</h6>
                             <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of the
-                                card’s content.</p>
+                                bulk of the card’s content.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -148,9 +152,8 @@
                         <div class="card-body">
                             <h6 class="card-subtittle">1002 Likes</h6>
                             <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of the
-                                card’s content.</p>
+                                bulk of the card’s content.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -164,24 +167,23 @@
                         <div class="card-body">
                             <h6 class="card-subtittle">278 Likes</h6>
                             <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk
-                                of the
-                                card’s content.</p>
+                                buk of the card’s content.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div><br>
-
         </div>
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
